crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__entities__nested_join_with_name-partial-solution.snap
---
source: crates/engine/query-solver/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#name\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.products\" ]\n    3 [ label = \"FedEntity#review\", color=royalblue,shape=parallelogram ]\n    4 [ label = \"Product.reviews\" ]\n    5 [ label = \"Review.stars\" ]\n    6 [ label = \"Product.name\" ]\n    7 [ label = \"*Product.id\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    3 -> 4 [ label = \"\" ]\n    4 -> 5 [ label = \"\" ]\n    2 -> 6 [ label = \"\" ]\n    2 -> 7 [ label = \"\" ]\n    3 -> 7 [ label = \"\", color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#name" ]
    2 [ label = "Query.products" ]
    3 [ label = "FedEntity#review" ]
    4 [ label = "Product.reviews" ]
    5 [ label = "Review.stars" ]
    6 [ label = "Product.name" ]
    7 [ label = "*Product.id" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "QueryPartition" ]
    3 -> 4 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
    2 -> 6 [ label = "Field" ]
    2 -> 7 [ label = "Field" ]
    3 -> 7 [ label = "RequiredBySubgraph" ]
}
