crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__entities__nested_join_with_name-solved-graph.snap
---
source: engine/crates/engine/query-planning/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"name\" ]\n    2 [ label = \"stars\" ]\n    3 [ label = \"reviews\" ]\n    4 [ label = \"products\" ]\n    7 [ label = \"Root#name\", shape=parallelogram, color=dodgerblue ]\n    8 [ label = \"products@Root#name\", shape=box, color=dodgerblue ]\n    11 [ label = \"FedEntity#review\", shape=parallelogram, color=dodgerblue ]\n    12 [ label = \"reviews@FedEntity#review\", shape=box, color=dodgerblue ]\n    13 [ label = \"stars@FedEntity#review\", shape=box, color=dodgerblue ]\n    16 [ label = \"name@Root#name\", shape=box, color=dodgerblue ]\n    17 [ label = \"*id\" ]\n    19 [ label = \"id@Root#name\", shape=box, color=dodgerblue ]\n    0 -> 4 [ label = \"\" ]\n    0 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 7 [ label = \"\", style=dashed,arrowhead=none ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    4 -> 3 [ label = \"\" ]\n    4 -> 11 [ label = \"\", style=dashed,arrowhead=none ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    3 -> 2 [ label = \"\" ]\n    12 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    13 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    4 -> 1 [ label = \"\" ]\n    8 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    16 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    4 -> 17 [ label = \"\" ]\n    8 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    19 -> 17 [ label = \"\", color=violet,arrowhead=none ]\n    11 -> 17 [ label = \"\", color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ root]
    1 [ name]
    2 [ stars]
    3 [ reviews]
    4 [ products]
    7 [ Root#name]
    8 [ products@Root#name]
    11 [ FedEntity#review]
    12 [ reviews@FedEntity#review]
    13 [ stars@FedEntity#review]
    16 [ name@Root#name]
    17 [ *id]
    19 [ id@Root#name]
    0 -> 4 [ label = "Field" ]
    0 -> 7 [ label = "CreateChildResolver" ]
    0 -> 7 [ label = "HasChildResolver" ]
    7 -> 8 [ label = "CanProvide" ]
    8 -> 4 [ label = "Provides" ]
    4 -> 3 [ label = "Field" ]
    4 -> 11 [ label = "HasChildResolver" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 3 [ label = "Provides" ]
    3 -> 2 [ label = "Field" ]
    12 -> 13 [ label = "CanProvide" ]
    13 -> 2 [ label = "Provides" ]
    4 -> 1 [ label = "Field" ]
    8 -> 11 [ label = "CreateChildResolver" ]
    8 -> 16 [ label = "CanProvide" ]
    16 -> 1 [ label = "Provides" ]
    4 -> 17 [ label = "Field" ]
    8 -> 19 [ label = "CanProvide" ]
    19 -> 17 [ label = "Provides" ]
    11 -> 17 [ label = "Requires" ]
}
