crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__entities__nested_join_with_name-solved.snap
---
source: crates/engine/query-solver/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"FedEntity#review\", shape=parallelogram, color=forestgreen ]\n    2 [ label = \"Root#price\", shape=parallelogram, color=royalblue style=dashed ]\n    3 [ label = \"Root#name\", shape=parallelogram, color=forestgreen ]\n    4 [ label = \"Root#category\", shape=parallelogram, color=royalblue style=dashed ]\n    5 [ label = \"*Product.id\", color=forestgreen ]\n    6 [ label = \"Product.name\", color=forestgreen ]\n    7 [ label = \"FedEntity#name\", shape=parallelogram, color=royalblue style=dashed ]\n    2 -> 1 [ label = <<b>10</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 2 [ label = <<b>10</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 1 [ label = <<b>10</b>>, color=forestgreen,fontcolor=forestgreen ]\n    0 -> 3 [ label = <<b>10</b>>, color=forestgreen,fontcolor=forestgreen ]\n    4 -> 1 [ label = <<b>10</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 4 [ label = <<b>10</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    2 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    2 -> 7 [ label = <<b>10</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 7 [ label = <<b>10</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 6 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "FedEntity#review", steiner=1 ]
    2 [ label = "Root#price", steiner=0 ]
    3 [ label = "Root#name", steiner=1 ]
    4 [ label = "Root#category", steiner=0 ]
    5 [ label = "*Product.id", steiner=1 ]
    6 [ label = "Product.name", steiner=1 ]
    7 [ label = "FedEntity#name", steiner=0 ]
    2 -> 1 [ cost=10, steiner=0]
    0 -> 2 [ cost=10, steiner=0]
    3 -> 1 [ cost=10, steiner=1]
    0 -> 3 [ cost=10, steiner=1]
    4 -> 1 [ cost=10, steiner=0]
    0 -> 4 [ cost=10, steiner=0]
    4 -> 5 [ cost=0, steiner=0]
    3 -> 5 [ cost=0, steiner=1]
    2 -> 5 [ cost=0, steiner=0]
    7 -> 6 [ cost=0, steiner=0]
    2 -> 7 [ cost=10, steiner=0]
    4 -> 7 [ cost=10, steiner=0]
    3 -> 6 [ cost=0, steiner=1]
}
